# textish

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: app.py  main.py
src/textish/: __init__.py  app_session.py  cli.py  config.py  protocol.py  server.py  session.py  types.py
tests/integration/: test_e2e.py
tests/unit/: conftest.py  test_app_session.py  test_protocol.py  test_server.py
