[project]
name = "textish"
version = "0.1.0"
description = "Serve Textual apps over SSH"
license = {text = "MIT"}
authors = [
    {name = "Aisha630",email = "ayeshashafique123@gmail.com"}
]
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "asyncssh (>=2.22.0,<3.0.0)",
    "textual (>=0.1.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=8.0.0,<9.0.0)",
]
lint = [
    "ruff (>=0.11.0,<0.12.0)",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    "tox",
]

[tool.poetry]
packages = [
    
    { include = "textish", from = "src" },
]

