[project]
name = "textish"
version = "0.1.0"
description = "Serve Textual apps over SSH"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Aisha630", email = "ayeshashafique123@gmail.com" }
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "asyncssh>=2.22.0,<3.0.0",
    "textual>=0.58.0,<1.0.0",
]
keywords = ["textual", "ssh", "tui", "terminal", "asyncio", "asyncssh"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/Aisha630/textish"
Repository = "https://github.com/Aisha630/textish"
Issues = "https://github.com/Aisha630/textish/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio"
]
lint = [
    "ruff>=0.11.0,<0.12.0",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    "tox>=4.0.0,<5.0.0",
]
release = [
    "python-semantic-release>=9.0.0,<10.0.0",
]

[tool.poetry]
packages = [
    { include = "textish", from = "src" },
]



[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install poetry && poetry build"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.pytest.ini_options]
testpaths = ["tests"]